--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Asap+Condensed');
+* {
+    padding: 0;
+    margin: 0;
+    color: #ffffff;
+    font-family: "Asap Condensed";
+}
