--- a/src/app/menu/menu-section/menu-section.component.css
+++ b/src/app/menu/menu-section/menu-section.component.css
@@ -3,14 +3,18 @@
     margin: 0 0 3px;
 }
 
-.listItem{
-    padding: 0;
-    margin: 0 0 3px;
-    padding-left: 5px;
+a {
     color: #ffffff;
+    text-decoration: none;
+}
+
+.listItem{
+    padding-left: 10px;
 }
 
 .selectedItem{
+    padding-left: 5px;
     border-left: 5px;
+    border-left-style: solid;
     border-left-color: green;
 }
