--- a/src/app/social/social.component.css
+++ b/src/app/social/social.component.css
@@ -1,6 +1,6 @@
 div {
     background-color: black;
-    position: fixed;
+    float: right;
     height: calc(100% - 100px);
     width: 150px;
     padding-left: 20px;
