--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,8 +1,12 @@
 div {
     background-color: black;
-    position: fixed;
-    height: calc(100% - 100px);
-    width: 150px;
+    float:left;
+    height: 839px;
+    /* height: calc(100% - 100px); */
+    /* Dummy width to get max-width working */
+    width: 100%;
+    min-width: 150px;
+    max-width: 8%;
     padding-left: 20px;
     padding-top: 10px;
     overflow-x: hidden;
