--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,8 +1,7 @@
 div {
     background-color: black;
     float:left;
-    height: 839px;
-    /* height: calc(100% - 100px); */
+    height: calc(100% - 100px);
     /* Dummy width to get max-width working */
     width: 100%;
     min-width: 150px;
