leaps and strides, boys

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<app-menu></app-menu>
-<app-content></app-content>
+<div class="wrapper">
+    <app-menu class="side-bar"></app-menu>
+    <app-content class="main-content"></app-content>
+    <app-social class="side-bar"></app-social>
+</div>
+
 <app-footer></app-footer>
