--- a/src/app/menu/menu-section/menu-section.component.css
+++ b/src/app/menu/menu-section/menu-section.component.css
@@ -1,7 +1,12 @@
 .listHeader{
     color: #bbbbbb;
-    padding-left: 3px;
+    padding-left: 15px;
     padding-top: 10px;
+}
+
+p {
+    margin: 0;
+    font-size: 16px;
 }
 
 a {
@@ -14,12 +19,13 @@ a {
 }
 
 .listItem{
-    padding-left: 10px;
+    padding-left: 25px;
 }
 
 .selectedItem{
-    padding-left: 5px;
+    margin-left: 12px;
+    padding-left: 8px;
     border-left: 5px;
     border-left-style: solid;
-    border-left-color: green;
+    border-left-color: #13DADA;
 }
