--- a/src/app/menu/menu-section/menu-section.component.html
+++ b/src/app/menu/menu-section/menu-section.component.html
@@ -1,6 +1,11 @@
 <div *ngIf="view | async as v">
   <p class="listHeader">{{ listHeader }}</p>
   <p class="listItemWrapper" *ngFor="let item of listItems">
-    <a [ngClass]="item.id==v.viewId ? 'selectedItem' : 'listItem'" (click)="updateView(item.id)" href="#">{{item.display}}</a>
+    <a 
+      [ngClass]="item.id==v.viewId ? 'selectedItem' : 'listItem'" 
+      (click)="viewIds.LIBRARY.hasOwnProperty(item.id) ? loadLibrary(item.id) : updateView(item.id)" 
+      href="#">
+      {{item.display}}
+    </a>
   </p>
 </div>
