--- a/src/app/content/song-lib-view/song-lib-view.component.html
+++ b/src/app/content/song-lib-view/song-lib-view.component.html
@@ -5,7 +5,7 @@
     <th>Album</th>
     <th>Time</th>
 
-      <tr *ngFor="let song of v.library">
+      <tr *ngFor="let song of v.library.songs">
         <td>
           {{ song.name }}
         </td>
