--- a/src/app/content/album-lib-view/album-lib-view.component.css
+++ b/src/app/content/album-lib-view/album-lib-view.component.css
@@ -1,3 +1,37 @@
 *{
     color:black;
 }
+
+.albumText{
+    margin: 0 auto;
+    text-align: center;
+    text-overflow: ellipsis;
+    /* The 3 attributes below are required for ellipsis to function */
+    white-space: nowrap;
+    overflow: hidden;
+    width: 80px;    
+}
+
+.albumSquare{
+    background: tomato;
+    padding: 5px;
+    width: 100px;
+    height: 100px;
+    margin: 15px;
+    margin-bottom: 4px;
+    
+    line-height: 100px;
+    color: white;
+    font-weight: bold;
+    font-size: 2em;
+    text-align: center;
+}
+
+.flex-wrapper{
+    padding: 0px;
+    margin: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;    
+}
+
