--- a/src/app/content/song-lib-view/song-lib-view.component.css
+++ b/src/app/content/song-lib-view/song-lib-view.component.css
@@ -1,3 +1,33 @@
 *{
-    color:black;
+    color:white;
+    padding: 0;
+    margin: 0;
+    border-collapse:collapse;
+}
+
+table {
+    width: 100%;
+}
+
+button {
+    background-color: Transparent;
+    border-radius: 100%;
+    border-color: #333;
+}
+
+th {
+    font-weight: normal;
+    text-transform: uppercase;
+}
+
+table th, table td {
+    padding: 20px;
+}
+
+table th {
+    text-align: left;
+}
+
+table td {
+    border-top: 1px solid #333;
 }
