--- a/src/app/content/song-lib-view/song-lib-view.component.html
+++ b/src/app/content/song-lib-view/song-lib-view.component.html
@@ -1,11 +1,15 @@
 <div *ngIf="view | async as v">
   <table>
+    <th></th>
     <th>Name</th>
     <th>Artist</th>
     <th>Album</th>
     <th>Time</th>
 
       <tr *ngFor="let song of v.library.songs">
+        <td>
+          <button (click)="setSong(song.id)"><img src="../../assets/images/play.png" /></button>
+        </td>
         <td>
           {{ song.name }}
         </td>
