--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
-<div class="footer">
-  <p style="text-align: center">Testing 123</p>
+<div class="footer" *ngIf="view | async as v">
+  <p style="text-align: center">{{v.currSongId}}</p>
 </div>
