--- a/src/app/menu/menu-section/menu-section.component.css
+++ b/src/app/menu/menu-section/menu-section.component.css
@@ -6,12 +6,6 @@
 
 p {
     margin: 0;
-    font-size: 16px;
-}
-
-a {
-    color: #ffffff;
-    text-decoration: none;
 }
 
 .listItemWrapper{
@@ -27,5 +21,5 @@ a {
     padding-left: 8px;
     border-left: 5px;
     border-left-style: solid;
-    border-left-color: #13DADA;
+    border-left-color: #0088FF;
 }
