--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,21 @@
 * {
     padding: 0;
     margin: 0;
-    color: #ffffff;
     font-family: "Asap Condensed";
+    font-size: 20px;
+    text-decoration: none;
+}
+
+body {
+    background-color: black;
+    color: #ffffff;
+}
+
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #0088FF;
 }
