--- a/src/app/content/song-lib-view/song-lib-view.component.css
+++ b/src/app/content/song-lib-view/song-lib-view.component.css
@@ -5,14 +5,47 @@
     border-collapse:collapse;
 }
 
+tr:hover {
+    background-color: #292929;
+}
+
+tr button{
+    visibility: hidden;
+}
+
+tr:hover button{
+    visibility: visible;
+}
+
 table {
     width: 100%;
 }
 
-button {
-    background-color: Transparent;
-    border-radius: 100%;
-    border-color: #333;
+button{
+    background: none;
+    border: none;
+}
+
+button:focus{
+    outline: none;
+}
+
+.play-button{
+    border-radius: 50%;
+    border: 2px white solid;
+    width: 40px;
+    height: 40px;
+    fill: white;
+}
+
+.play-button:hover{
+    border-color: #0088FF;
+    fill: #0088FF;
+}
+
+.play-button:active{
+    border-color: #adadad;
+    fill: #adadad;
 }
 
 th {
