--- a/src/app/content/song-lib-view/song-lib-view.component.html
+++ b/src/app/content/song-lib-view/song-lib-view.component.html
@@ -10,7 +10,8 @@
         <td>
             <button (click)="setSong(song.id)">
                 <svg class="play-button" xmlns="http://www.w3.org/2000/svg"  version="1.1" 
-                  width="24" height="24" viewBox="0 0 24 24"><path d="M8,5.14V19.14L19,12.14L8,5.14Z" /></svg>
+                  width="24" height="24" viewBox="0 0 24 24"><path d="M8,5.14V19.14L19,12.14L8,5.14Z" />
+                </svg>
             </button>            
         </td>
         <td>
