--- a/src/app/content/artist-lib-view/artist-lib-view.component.html
+++ b/src/app/content/artist-lib-view/artist-lib-view.component.html
@@ -1,10 +1,12 @@
 <div *ngIf="view | async as v">
     <div class="flex-wrapper">
         <div *ngFor="let artist of v.library.artists">
-            <div class="artistSquare">{{ artist.id }}</div>
-            <div class="artistText">
-                <a href="#" (click)="loadArtist(artist.id)">{{ artist.name }}</a>
-            </div>
+            <a href="#" (click)="loadArtist(artist.id)">
+                <div class="artistSquare">{{ artist.id }}</div>
+            </a>
+            <a href="#" (click)="loadArtist(artist.id)">
+                <div class="artistText">{{ artist.name }}</div>
+            </a>
         </div>
     </div>
 </div>
